// Copyright Â© 2025 Colden Cullen
// SPDX-License-Identifier: MIT

edition = "2023";
package bonk.v0;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

message OpenSessionRequest {
  message LogStreamingOptions {
    int64 level = 1;
    bool add_source = 2;
  }

  message WorkspaceDescriptionLocal {
    string absolute_path = 1;
  }

  message WorkspaceDescriptionTest {}

  string session_id = 1;
  LogStreamingOptions log_streaming = 2;

  oneof workspace_description {
    WorkspaceDescriptionLocal local = 5;

    WorkspaceDescriptionTest test = 99;
  }
}

// This is meant to mirror [slog.Record](https://pkg.go.dev/log/slog#Record)
message OpenSessionResponse {
  message Ack {}
  message LogRecord {
    google.protobuf.Timestamp time = 1;
    string message = 2;
    int64 level = 3;
    map<string, google.protobuf.Value> attrs = 4;
  }

  oneof message {
    Ack ack = 1;
    LogRecord log_record = 2;
  }
}

message ExecuteTaskRequest {
  string session_id = 1;
  string name = 2;
  string executor = 3;
  repeated string inputs = 4;
  google.protobuf.Value arguments = 5;
}

message ExecuteTaskResponse {
  message FollowupTask {
    string name = 1;
    string executor = 2;
    repeated string inputs = 3;
    google.protobuf.Value arguments = 4;
  }

  repeated string output = 1;
  repeated FollowupTask followup_tasks = 2;
}

service ExecutorService {
  // Used for opening & closing sessions
  rpc OpenSession(stream OpenSessionRequest) returns (stream OpenSessionResponse);

  // Executor interface
  rpc ExecuteTask(ExecuteTaskRequest) returns (ExecuteTaskResponse);
}
